# Computer-Graphics-Oefeningen

./: .gitignore  README.md
Oefeningen_les_1/Les_1/: CG1_2DVector.cpp  CG1_ActiveEdgeTable.cpp  CG1_Canvas.cpp  CG1_Canvas.h  CG1_DrawTool.cpp  CG1_DrawTool.h  CG1_Edge.cpp  CG1_EdgeTable.cpp  CG1_EdgeTable.h  CG1_EdgeTableRow.cpp  CG1_Line.cpp  CG1_Polygon.cpp  CG1_Window.cpp  CG1_Window.h  CMakeLists.txt  RGB_Color.h  cg1oefeningen.cpp  cg1oefeningen.h  cg1oefeningen.ui  main.cpp
Oefeningen_les_2/les2/.cache/clangd/index/: CG1_2DPolygon.cpp.5FB45BC9BF43E7BD.idx  CG1_2DPolygon.h.CDE5ADBBD98A1831.idx  CG1_2DVector.cpp.ABFB40AAD57DC200.idx  CG1_2DVector.h.984DECC1B84F2B57.idx  CG1_ActiveEdgeTable.cpp.D7E9DE02E699E5D4.idx  CG1_ActiveEdgeTable.h.BF019BD5828B237A.idx  CG1_DrawTool.h.CE69EA92167620E3.idx  CG1_Drawtool.cpp.EF7A815CBA153B64.idx  CG1_Edge.cpp.CA537A73D0784ABD.idx  CG1_Edge.h.6590D8F48FB15F20.idx  CG1_EdgeTable.cpp.B57B9C6B72A10192.idx  CG1_EdgeTable.h.5116D886A697EE50.idx  CG1_EdgeTableRow.cpp.A02162F81CCC1151.idx  CG1_EdgeTableRow.h.786B2CA9D4EBD0E1.idx  CG1_Line.cpp.FF5FD243C9B30E7E.idx  CG1_Line.h.A7C3F40506495A91.idx  CG1_Polygon.cpp.7BEFC19387A98BB6.idx  CG1_Polygon.h.633798A74D7ECB40.idx  RGB_Color.cpp.79E1C23F1F8CBF72.idx  RGB_Color.h.704A261662656E44.idx  cg_Canvas.cpp.ED3FCD0B4F611AA3.idx  cg_Canvas.h.1CF6C8DBC07C9229.idx  cg_MainWindow.cpp.CEB8BCFE585D8A19.idx  cg_MainWindow.h.39DD38488541580F.idx  main.cpp.4B8F066C43D3108A.idx
Oefeningen_les_2/les2/src/: CG1Oefeningen_LES2.vcproj  CG1_ActiveEdgeTable.cpp  CG1_DrawTool.cpp  CG1_DrawTool.h  CG1_EdgeTable.h  CG1_EdgeTableRow.cpp  CG1_Line.cpp  CG1_Polygon.cpp  CG1_Polygon.h  CMakeLists.txt  cg_Canvas.cpp  cg_MainWindow.cpp  cg_MainWindow.h  cg_window.ui
Oefeningen_les_3/les3/: CG1_2DPolygon.cpp  CG1_2DVector.cpp  CG1_2DVector.h  CG1_4DMatrix.cpp  CG1_4DMatrix.h  CG1_4DVector.h  CG1_ActiveEdgeTable.cpp  CG1_ActiveEdgeTable.h  CG1_DrawTool.cpp  CG1_DrawTool.h  CG1_Edge.h  CG1_EdgeTable.cpp  CG1_EdgeTable.h  CMakeLists.txt  RGB_Color.cpp  cg_Canvas.h  cg_MainWindow.cpp  cg_window.ui
Oefeningen_les_3/les3/.cache/clangd/index/: CG1_2DPolygon.cpp.C5983F8BB568269C.idx  CG1_2DPolygon.h.B1195BD5B9A8B11E.idx  CG1_2DVector.cpp.56A0258EB17F421D.idx  CG1_2DVector.h.ABB99E4449ACE8F8.idx  CG1_4DMatrix.cpp.5F90BF878DC603B3.idx  CG1_4DMatrix.h.9739CEE4470B3AA3.idx  CG1_4DVector.cpp.F0771D31E6E275F5.idx  CG1_4DVector.h.90129646A4931224.idx  CG1_ActiveEdgeTable.cpp.FD496309E414AF86.idx  CG1_ActiveEdgeTable.h.87F5A42395B2F132.idx  CG1_DrawTool.h.928EA1F23573C68B.idx  CG1_Drawtool.cpp.50D5FB5F3A487A3C.idx  CG1_Edge.cpp.078FDD692EA58991.idx  CG1_Edge.h.1B7DEA22AB83A349.idx  CG1_EdgeTable.cpp.6C63F4E335ED787B.idx  CG1_EdgeTable.h.81CEE4E9CAF8995A.idx  CG1_EdgeTableRow.cpp.7C6491F868ED649D.idx  CG1_EdgeTableRow.h.D773211110919484.idx  CG1_Line.cpp.2BC736977DC23844.idx  CG1_Line.h.A1F9F68B9C7C5E39.idx  CG1_Polygon.cpp.FAEBD6264DE1BAE9.idx  CG1_Polygon.h.C7EB2B04165294F6.idx  RGB_Color.cpp.961420310DFBD9DC.idx  RGB_Color.h.AB03DAC612697B91.idx  cg_Canvas.cpp.04DD840C50E0F5BC.idx  cg_Canvas.h.8BA65AD284FEA8C1.idx  cg_MainWindow.cpp.1FBAEA0F842AA9DB.idx  cg_MainWindow.h.F88BC0F02638D7AF.idx  main.cpp.BF0D536FD27625FE.idx
Oefeningen_les_4/les4/.cache/clangd/index/: CG1_2DPolygon.h.4B7017A513FAAE57.idx  CG1_2DVector.cpp.0BDE0DFE15B34D83.idx  CG1_2DVector.h.98A22E4C5E5FA9D9.idx  CG1_4DMatrix.cpp.F240D424C32194E8.idx  CG1_4DMatrix.h.E26E55846EE23DEE.idx  CG1_4DVector.cpp.A34CF9E6118B7162.idx  CG1_4DVector.h.E211AADFC3056C62.idx  CG1_ActiveEdgeTable.cpp.0E64F3F91F2AE61D.idx  CG1_ActiveEdgeTable.h.DF1B927132D68DF3.idx  CG1_Bezier.cpp.58975604AFB2E711.idx  CG1_Bezier.h.9C5E12A9DF1707DB.idx  CG1_DrawTool.h.3FCF45608F52E335.idx  CG1_Drawtool.cpp.F511A4DE2985E838.idx  CG1_Edge.cpp.208364ACC7C52E79.idx  CG1_EdgeTableRow.h.73B2F1E49372E8D5.idx  CG1_Line.cpp.5CB3FF1D2C444761.idx  CG1_ParamCubCurve.cpp.EB203057781D3A18.idx  CG1_ParamCubCurve.h.5CE1FFF28AA4239B.idx  List_Beziers.cpp.6D213C24FE57E25D.idx  List_Beziers.h.4ED45BA4CAA75BBB.idx  Object_Bezier.cpp.9E8AA26C1EFEEFFA.idx  RGB_Color.cpp.48218342184933C6.idx  RGB_Color.h.409F3B006BC6CC01.idx  cg_MainWindow.cpp.BD4D88FCED089897.idx  cg_MainWindow.h.E2E712C82E26B1CC.idx  main.cpp.DC07117FEF0E637C.idx
Oefeningen_les_4/les4/src/: CG1_4DMatrix.h  CG1_4DVector.cpp  CG1_ActiveEdgeTable.h  CG1_Bezier.cpp  CG1_Bezier.h  CG1_DrawTool.cpp  CG1_DrawTool.h  CG1_EdgeTable.cpp  CG1_EdgeTable.h  CG1_EdgeTableRow.cpp  CG1_Line.h  CG1_ParamCubCurve.cpp  CG1_ParamCubCurve.h  CMakeLists.txt  List_Beziers.cpp  List_Beziers.h  List_Polygons.h  List_Vertices.h  Object_Polygon.h  Object_Vertex.h  main.cpp
Oefeningen_les_5/les4/.cache/clangd/index/: CG1_2DPolygon.cpp.8E44689A98CFA511.idx  CG1_Bezier.cpp.58975604AFB2E711.idx  CG1_Bezier.h.9C5E12A9DF1707DB.idx  CG1_Edge.h.E658598E32690A4C.idx  CG1_EdgeTable.cpp.32D64F8F3936F9A2.idx  CG1_EdgeTable.h.9D61F38E76AB52E1.idx  CG1_EdgeTableRow.cpp.B39695E13E6D471A.idx  CG1_Line.h.5EB9CFE3CADD49C0.idx  CG1_ParamCubCurve.cpp.EB203057781D3A18.idx  (+7 more)
Oefeningen_les_5/les4/src/: CG1_2DPolygon.h  CG1_4DMatrix.cpp  CG1_ActiveEdgeTable.cpp  CG1_Bezier.h  CG1_DrawTool.cpp  CG1_DrawTool.h  CG1_Edge.cpp  CG1_EdgeTableRow.h  CMakeLists.txt  List_Beziers.h  List_Objects.h  List_Polygons.h  Object_Bezier.cpp  Object_Bezier.h  Object_Object.h  ZBuffer.h  cg_Canvas.cpp  cg_MainWindow.cpp  cg_MainWindow.h  cg_window.ui
Oefeningen_les_6/OpenGL7_2/src/: CMakeLists.txt  main.cpp  navigation.cpp  navigation.h  openGLApp.cpp  openGLApp.h  scene.cpp  scene.h
Oefeningen_les_6/OpenGL_Planets/src/: CMakeLists.txt  main.cpp  planets.cpp  planets.h  planetsview.cpp  planetsview.h  util.h
Oefeningen_les_7/raytracer/src/: AxisAlignedBox.cpp  AxisAlignedBox.h  CMakeLists.txt  RayTracer.cpp  RayTracer.h  Shape.cpp  Shape.h  ShapeList.cpp  ShapeList.h  Vec3.cpp  Vec3.h  cg_Canvas.cpp  cg_Canvas.h  cg_MainWindow.cpp  cg_MainWindow.h  cg_window.ui  pointLight.cpp  pointLight.h  pointLightList.h  ray.cpp  ray.h  returnObject.cpp  returnObject.h  scene.cpp  scene.h  sphere.cpp  sphere.h
